--- a/crudAngularEWebApi/AppAngular/src/app/components/pessoas/pessoas.component.html
+++ b/crudAngularEWebApi/AppAngular/src/app/components/pessoas/pessoas.component.html
@@ -4,7 +4,7 @@
             <h6>{{tituloFormulario}}</h6>
             <hr>
 
-            <form [formGroup]="formulario">
+            <form [formGroup]="formulario" (ngSubmit)="Enviar()">
 
                 <div class="form-group">
                     <label class="my-2"> Nome </label>
