--- a/crudAngularEWebApi/AppAngular/src/app/components/pessoas/pessoas.component.html
+++ b/crudAngularEWebApi/AppAngular/src/app/components/pessoas/pessoas.component.html
@@ -1,5 +1,39 @@
 <div class="container p-5">
+    <div class="border boder-light rounded p-5 shadow" *ngIf="visibilidadeTabela">
+        <Button type="button" class="btn btn-sm btn-secondary" (click)="ExibirFormularioTabela()">Cadastrar Pessoa</Button>
+        
+        <hr/>
+
+        <!-- ngif="listPessoas" deve vir aqui, mas não to conseguindo -->
+        <table class="table table-striped table-hover table-sm">
+            <tr class="thead-light">
+                <th>Nome</th>
+                <th>Sobrenome</th>
+                <th>Idade</th>
+                <th></th>
+                <th></th>
+            </tr>
+            
+            <tr *ngFor="let pessoa of listPessoas">
+                <td>{{pessoa.name}}</td>
+                <td>{{pessoa.lastName}}</td>
+                <td>{{pessoa.age}}</td>
+                <td>
+                    <button type="button" class="btn btn-sm btn-outline-info"> Atualizar </button>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-sm btn-outline-danger"> Excluir </button>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+</div>
+
+
+<div class="container p-5" *ngIf="visibilidadeFormulario">
     <div class="row">
+        <!-- ngif="formulario" deve vir aqui, mas não to conseguindo -->
         <div class="col-6 border border-light rounded p-5 shadow">
             <h6>{{tituloFormulario}}</h6>
             <hr>
