--- a/crudAngularEWebApi/AppAngular/src/app/components/pessoas/pessoas.component.html
+++ b/crudAngularEWebApi/AppAngular/src/app/components/pessoas/pessoas.component.html
@@ -21,7 +21,7 @@
                             <td>{{pessoa.lastName}}</td>
                             <td>{{pessoa.age}}</td>
                             <td>
-                                <button type="button" class="btn btn-sm btn-outline-info" (click)="Atualizar(pessoa)"> Atualizar </button>
+                                <button type="button" class="btn btn-sm btn-outline-info" (click)="Atualizar(pessoa.userID)"> Atualizar </button>
                             </td>
                             <td>
                                 <button type="button" class="btn btn-sm btn-outline-danger" (click)="ExibirModal(pessoa.userID, pessoa.name, modalConfirmaExclusao)"> Excluir </button>
